0024804: OSD_PerfMeter documentation is broken